# pohodnik-ration

./: LICENSE  Main.html  README.md  pohodnik-ration.cabal  pohodnik-ration.sublime-project
src/: Main.hs  Main.js
src/Ration/: Application.hs  Food.hs  Layout.hs  Load.hs  Person.hs  Util.hs
src/Ration/Control/: List.hs
